--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -1,3 +1,30 @@
-<p>
-  recipe-detail works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <img src="" alt="some image" class="img-responsive">
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <h1>Recipe Name</h1>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    <button type="button" class="btn btn-primary dropdown-toggle">Manage Recipe <span class="caret"></span></button>
+    <ul class="dropdown-menu">
+      <li><a href="#">To shoping list</a></li>
+      <li><a href="#">Edit recipe</a></li>
+      <li><a href="#">Delete recipe</a></li>
+    </ul>
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Description
+  </div>
+</div>
+<div class="row">
+  <div class="col-xs-12">
+    Ingredients
+  </div>
+</div>
