--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,3 +1,22 @@
-<p>
-  shopping-edit works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form>
+      <div class="col-xs-5">
+        <label for="name">Name</label>
+        <input type="text" id="name" class="form-control">
+      </div>
+      <div class="col-xs-2">
+        <label for="amount">Amount</label>
+        <input type="number" id="amount" class="form-control">
+      </div>
+      <div class="row">
+        <div class="col-xs-12 buttons">
+          <button class="btn btn-success" type="submit">Add</button>
+          <button class="btn btn-danger" type="button">Delete</button>
+          <button class="btn btn-primary" type="button">Clear</button>
+        </div>
+      </div>
+    </form>
+
+  </div>
+</div>
