--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,7 +1,11 @@
 <div class="row">
   <div class="col-xs-12 col-md-12">
+    <div class="line"></div>
     <app-shopping-edit></app-shopping-edit>
+    <ul class="list-group">
+      <a href="#"
+         class="list-group-item"
+        *ngFor="let ingredient of ingredients">{{ ingredient.name }} ({{ ingredient.amount }})</a>
+    </ul>
   </div>
-  <div class="line"></div>
-  <p>Shopping list there</p>
 </div>
