Improved custom directives, events and services

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 
-<app-header></app-header>
+<app-header (navSelectEvent)="onNavSelect($event)"></app-header>
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-12">
-      <app-recipes></app-recipes>
-      <app-shopping-list></app-shopping-list>
+      <app-recipes *ngIf = "showComponent === 'recipe'"></app-recipes>
+      <app-shopping-list *ngIf = "showComponent !== 'recipe'"></app-shopping-list>
     </div>
   </div>
 </div>
