--- a/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
+++ b/src/app/recipes/recipe-list/recipe-item/recipe-item.component.html
@@ -1,3 +1,14 @@
-<p>
-  recipe-item works!
-</p>
+<a href="#" class="list-group-item clearfix"
+   (click)="onSelectRecipe()"
+>
+  <div class="pull-left">
+    <h4 class="list-group-item-heading">{{ item_recipe.name }}</h4>
+    <p class="list-group-item-text">{{ item_recipe.description }}</p>
+  </div>
+  <span class="pull-right">
+    <img [src]="item_recipe.imagePath"
+         [alt]="item_recipe.name"
+         class="img-responsive"
+         style="max-height: 50px">
+  </span>
+</a>
