--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -3,15 +3,25 @@
     <form>
       <div class="col-xs-5">
         <label for="name">Name</label>
-        <input type="text" id="name" class="form-control">
+        <input
+          type="text"
+          id="name"
+          class="form-control"
+          #nameInput
+        >
       </div>
       <div class="col-xs-2">
         <label for="amount">Amount</label>
-        <input type="number" id="amount" class="form-control">
+        <input
+          type="number"
+          id="amount"
+          class="form-control"
+          #amountInput
+        >
       </div>
       <div class="row">
         <div class="col-xs-12 buttons">
-          <button class="btn btn-success" type="submit">Add</button>
+          <button class="btn btn-success" type="button" (click)="onAddIngred(amountInput, nameInput)">Add</button>
           <button class="btn btn-danger" type="button">Delete</button>
           <button class="btn btn-primary" type="button">Clear</button>
         </div>
