--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -5,7 +5,8 @@
     <ul class="list-group">
       <a href="#"
          class="list-group-item"
-        *ngFor="let ingredient of ingredients">{{ ingredient.name }} ({{ ingredient.amount }})</a>
+        *ngFor="let ingredient of ingredients">
+        {{ ingredient.name }} ({{ ingredient.amount }})</a>
     </ul>
   </div>
 </div>
