--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,8 +3,7 @@
 <div class="container">
   <div class="row">
     <div class="col-xs-12 col-md-12">
-      <app-recipes *ngIf = "showComponent === 'recipe'"></app-recipes>
-      <app-shopping-list *ngIf = "showComponent !== 'recipe'"></app-shopping-list>
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
