--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,20 +1,33 @@
 <nav class="navbar navbar-default">
   <div class="container-fluid">
     <div class="navbar-header">
-      <a href="#" class="navbar-brand">Recipe Master</a>
+      <a style="cursor: pointer" class="navbar-brand">Recipe Master</a>
     </div>
 
     <div class="collapse navbar-collapse">
       <ul class="nav navbar-nav">
-        <li><a href="#" (click)="onSelect('recipe')">Recipes</a></li>
-        <li><a href="#" (click)="onSelect('shoping-list')">Shopping list</a></li>
+        <li routerLinkActive="active">
+          <a
+             routerLink="/recipes-list"
+             style="cursor: pointer"
+          >
+            Recipes
+          </a>
+        </li>
+        <li routerLinkActive="active">
+          <a
+            routerLink="/shoping-list"
+            style="cursor: pointer"
+          >
+            Shopping list</a>
+        </li>
       </ul>
       <ul class="nav navbar-nav navbar-right">
         <li class="dropdown" appDropdown>
-          <a href="#" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="caret"></span></a>
+          <a style="cursor: pointer" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="#">Save Data</a></li>
-            <li><a href="#">Fetching Data</a></li>
+            <li><a style="cursor: pointer">Save Data</a></li>
+            <li><a style="cursor: pointer">Fetching Data</a></li>
           </ul>
         </li>
       </ul>
