created form controls

--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -18,7 +18,7 @@
     <ul class="dropdown-menu">
       <li><a style="cursor: pointer" (click)="toShopingList()">To shoping list</a></li>
       <li><a style="cursor: pointer" [routerLink]="['edit']">Edit recipe</a></li>
-      <li><a style="cursor: pointer">Delete recipe</a></li>
+      <li><a style="cursor: pointer" (click)="deleteRecipe()">Delete recipe</a></li>
     </ul>
   </div>
 </div>
