--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -1,3 +1,94 @@
-<p>
-  recipe-edit works!
-</p>
+<div class="row">
+  <div class="col-xs-12">
+    <form [formGroup]="recipeForm" (ngSubmit)="onSubmit()">
+      <div class="row">
+        <div class="col-xs-12">
+          <button class="btn btn-success" type="submit" [disabled]="recipeForm.invalid">Save</button>
+          <button class="btn btn-danger" type="button" (click)="onCancel()">Cancel</button>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="name">Name:</label>
+            <input
+              formControlName="name"
+              type="text"
+              id="name"
+              name="name"
+              class="form-control"
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="imgPath">Image path:</label>
+            <input
+              formControlName="imgPath"
+              type="text"
+              id="imgPath"
+              name="imgPath"
+              class="form-control"
+              #imgPath
+            >
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <img [src]="imgPath.value" class="img-responsive">
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <div class="form-group">
+            <label for="description">Description</label>
+            <textarea
+              formControlName="description"
+              type="text"
+              id="description"
+              name="description"
+              class="form-control"
+              rows="6"
+            ></textarea>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12" formArrayName="ingredients">
+          <div class="form-group">
+            <div
+              class="row"
+              *ngFor="let ingredient of recipeForm.get('ingredients').controls; let i = index"
+              [formGroupName]="i"
+              style="margin-top: 10px"
+            >
+              <div class="col-xs-8">
+                <input type="text" class="form-control" formControlName="name">
+              </div>
+              <div class="col-xs-2">
+                <input type="text" class="form-control" formControlName="amount">
+              </div>
+              <div class="col-xs-2">
+                <button class="btn btn-danger" (click)="onDeleteIngredient(i)">X</button>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col-xs-12">
+          <button
+            class="btn btn-info"
+            type="button"
+            (click)="onAddIngredient()"
+          >
+            +
+          </button>
+        </div>
+      </div>
+    </form>
+  </div>
+</div>
