--- a/src/app/shopping-list/shopping-edit/shopping-edit.component.html
+++ b/src/app/shopping-list/shopping-edit/shopping-edit.component.html
@@ -1,13 +1,15 @@
 <div class="row">
   <div class="col-xs-12">
-    <form>
+    <form (ngSubmit)="onSubmit(editForm)" #editForm="ngForm">
       <div class="col-xs-5">
         <label for="name">Name</label>
         <input
           type="text"
           id="name"
           class="form-control"
-          #nameInput
+          name="name"
+          ngModel
+          required
         >
       </div>
       <div class="col-xs-2">
@@ -16,14 +18,21 @@
           type="number"
           id="amount"
           class="form-control"
-          #amountInput
+          name="amount"
+          pattern="^[1-9]+[0-9]*$"
+          ngModel
+          required
+
         >
       </div>
       <div class="row">
         <div class="col-xs-12 buttons">
-          <button class="btn btn-success" type="button" (click)="onAddIngred(amountInput, nameInput)">Add</button>
-          <button class="btn btn-danger" type="button">Delete</button>
-          <button class="btn btn-primary" type="button">Clear</button>
+          <button class="btn btn-success" type="submit"
+                  [disabled]="editForm.invalid">
+            {{ editMode ? 'Edit' : 'Add'}}
+          </button>
+          <button class="btn btn-danger" type="button" (click)="onDelete()" *ngIf="editMode">Delete</button>
+          <button class="btn btn-primary" type="button" (click)="onClear()">Clear</button>
         </div>
       </div>
     </form>
