--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -3,9 +3,11 @@
     <div class="line"></div>
     <app-shopping-edit></app-shopping-edit>
     <ul class="list-group">
-      <a href="#"
+      <a
          class="list-group-item"
-        *ngFor="let ingredient of ingredients">
+        *ngFor="let ingredient of ingredients; let i = index"
+         (click)="onEditIngredient(i)"
+      >
         {{ ingredient.name }} ({{ ingredient.amount }})</a>
     </ul>
   </div>
