--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -26,8 +26,8 @@
         <li class="dropdown" appDropdown>
           <a style="cursor: pointer" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a style="cursor: pointer">Save Data</a></li>
-            <li><a style="cursor: pointer">Fetching Data</a></li>
+            <li><a style="cursor: pointer" (click)="onSave()">Save Data</a></li>
+            <li><a style="cursor: pointer" (click)="onFetch()">Fetching Data</a></li>
           </ul>
         </li>
       </ul>
