created validation of signUp and SignIn components

--- a/src/app/auth/signin/signin.component.html
+++ b/src/app/auth/signin/signin.component.html
@@ -3,7 +3,7 @@
     <form (ngSubmit)="onSignin(f)" #f="ngForm">
       <div class="form-group">
         <label for="email">Email:
-          <span class="help-text" *ngIf="mail.invalid && mail.touched">This field is required!</span>
+          <span class="error" *ngIf="mail.invalid && mail.touched">This field is required!</span>
         </label>
         <input
           name="email"
@@ -15,7 +15,7 @@
       </div>
       <div class="form-group">
         <label for="password">Password:
-          <span class="help-text" *ngIf="password.invalid && password.touched">This field is required!</span>
+          <span class="error" *ngIf="password.invalid && password.touched">This field is required!</span>
         </label>
         <input
           name="password"
@@ -27,5 +27,9 @@
       </div>
       <button class="btn btn-primary" type="submit" [disabled]="f.invalid">Sign in</button>
     </form>
+    <ng-template [ngIf]="(authState | async).errorText">
+      <p class="error">{{ (authState | async).errorText }}</p>
+    </ng-template>
+
   </div>
 </div>
