--- a/src/app/auth/signup/signup.component.css
+++ b/src/app/auth/signup/signup.component.css
@@ -1,8 +1,12 @@
 input.ng-invalid.ng-touched {
-  border: 2px solid red;
-}
+   border: 2px solid red;
+ }
 .help-text {
   color: red;
   font-family: Verdana;
   font-size: 14px;
+}
+.error {
+  padding: 10px;
+  color: red;
 }
