--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -27,9 +27,23 @@
           <li><a routerLink="/signup">Register</a></li>
           <li><a routerLink="/signin">Login</a></li>
         </ng-template>
-        <li><a style="cursor: pointer" (click)="onLogout()" *ngIf="(authState | async).authenticated">Logout</a></li>
+        <li>
+          <a
+            style="cursor: pointer"
+            (click)="onLogout()"
+            *ngIf="(authState | async).authenticated"
+          >
+            Logout
+          </a>
+        </li>
         <li class="dropdown" appDropdown *ngIf="(authState | async).authenticated">
-          <a style="cursor: pointer" class="dropdown-toggle" data-toggle="dropdown">Manage <span class="caret"></span></a>
+          <a
+            style="cursor: pointer"
+            class="dropdown-toggle"
+            data-toggle="dropdown"
+          >
+            Manage <span class="caret"></span>
+          </a>
           <ul class="dropdown-menu">
             <li><a style="cursor: pointer" (click)="onSave()">Save Data</a></li>
             <li><a style="cursor: pointer" (click)="onFetch()">Fetching Data</a></li>
