--- a/src/app/recipes/recipe-edit/recipe-edit.component.html
+++ b/src/app/recipes/recipe-edit/recipe-edit.component.html
@@ -61,12 +61,12 @@
           <div class="form-group">
             <div
               class="row"
-              *ngFor="let ingredient of recipeForm.get('ingredients').controls; let i = index"
+              *ngFor="let ingredient of recipeForm.get('ingredients').value; let i = index"
               [formGroupName]="i"
               style="margin-top: 10px"
             >
               <div class="col-xs-8">
-                <input type="text" class="form-control" formControlName="name">
+                <input type="text"  class="form-control" formControlName="name">
               </div>
               <div class="col-xs-2">
                 <input type="text" class="form-control" formControlName="amount">
