--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,10 +1,12 @@
 <nav class="navbar navbar-default">
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <a routerLink="/" style="cursor: pointer" class="navbar-brand">Recipe Master</a>
+  <div class="row">
+    <div class="col-xs-12 col-md-3">
+      <a routerLink="/" style="cursor: pointer" class="navbar-brand">
+        <img src="assets/master_culinar_logo.png" alt="Master Culinar" class="img-responsive">
+      </a>
     </div>
 
-    <div class="collapse navbar-collapse">
+    <div class="col-xs-12 col-md-9">
       <ul class="nav navbar-nav">
         <li routerLinkActive="active">
           <a
