--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,11 @@
 
 <app-header (navSelectEvent)="onNavSelect($event)"></app-header>
-<div class="container">
+<router-outlet></router-outlet>
+<div class="container-fluid">
+
   <div class="row">
     <div class="col-xs-12 col-md-12">
-      <router-outlet></router-outlet>
+
     </div>
   </div>
 </div>
