--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,1 +1,11 @@
-<h1>Welcome to Master Culinar!</h1>
+
+<div class="container-fluid">
+  <div class="row">
+      <div class="main-block">
+        <div class="col-xs-12 col-md-8 col-md-offset-2">
+          <h1>Welcome to Master Culinar</h1>
+        </div>
+
+      </div>
+  </div>
+</div>
