--- a/src/app/recipes/recipe-detail/recipe-detail.component.html
+++ b/src/app/recipes/recipe-detail/recipe-detail.component.html
@@ -11,7 +11,7 @@
 <div class="row">
   <div class="col-xs-12" appDropdown>
     <button type="button"
-            class="btn btn-primary dropdown-toggle">
+            class="my-btn-style dropdown-toggle">
       Manage Recipe
       <span class="caret"></span>
     </button>
