--- a/src/app/recipes/recipe-list/recipe-list.component.html
+++ b/src/app/recipes/recipe-list/recipe-list.component.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-xs-12">
-    <button class="btn btn-success"
+    <button class="my-btn-style"
     (click)="onNewRecipe()">New recipes</button>
   </div>
   <hr>
