--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,19 @@
 /* You can add global styles to this file, and also import other style files */
+* {
+  outline: none;
+}
+.my-btn-style {
+  font-family: 'Ubuntu';
+  background: #000;
+  color: #fff;
+  padding: 10px 20px;
+  margin-bottom: 15px;
+  border: none;
+  border-radius: 5px;
+  transition: color .4s;
+}
+.my-btn-style:hover {
+  color: #d29810;
+  text-shadow: 0 1px 10px #d29810;
+}
+
