--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,8 +1,8 @@
 
-<div class="container-fluid">
+<div class="container-fluid" [@shadow]>
   <div class="row">
       <div class="main-block">
-        <div class="col-xs-12 col-md-8 col-md-offset-2">
+        <div class="col-xs-12 col-md-4 col-md-offset-7">
           <h1>Welcome to Master Culinar</h1>
         </div>
 
