--- a/src/app/shopping-list/shopping-list.component.html
+++ b/src/app/shopping-list/shopping-list.component.html
@@ -1,6 +1,6 @@
-<div class="row">
+<div class="row" [@shadow]>
   <div class="col-xs-12 col-md-12">
-    <div class="line"></div>
+    <!--<div class="line"></div>-->
     <app-shopping-edit></app-shopping-edit>
     <ul class="list-group">
       <a
