--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -3,42 +3,72 @@ nav {
   font-size: 20px;
   position: relative;
   background: lightgoldenrodyellow;
+  padding: 10px;
   z-index: 2;
 }
 nav li a {
+  margin-left: 20px;
   font-size: 30px;
+  z-index: 10;
 }
 nav .nav {
-  transform: translateY(2vh);
   margin-bottom: 0;
 }
 .navbar-brand {
-  height: 100%;
+  display: block;
+  width: 100%;
+  position: relative;
 }
-nav .navbar-right {
-  transform: none;
-}
-nav ul {
-
+nav a img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  z-index: 5;
 }
 .navbar {
   margin-bottom: 0;
 }
+.navbar-nav {
+  margin-bottom: 0;
+}
 .navbar-right {
   margin-right: 10px;
+  transform: none;
 }
+/*nav::after {*/
+  /*content: '';*/
+  /*position: absolute;*/
+  /*bottom: 0;*/
+  /*left: 0;*/
+  /*width: 100%;*/
+  /*height: 10vh;*/
+  /*background: lightgoldenrodyellow;*/
+  /*border-bottom: 2px solid #e89b27;*/
+  /*box-shadow: 0 9px 18px -8px #000;*/
+  /*transform-origin: top right;*/
+  /*transform: skewY(-2deg);*/
+  /*z-index: -1;*/
+/*}*/
 nav::after {
   content: '';
   position: absolute;
-  bottom: 0;
+  top: 100%;
   left: 0;
   width: 100%;
-  height: 10vh;
-  background: lightgoldenrodyellow;
-  border-bottom: 2px solid #e89b27;
-  box-shadow: 0 9px 18px -8px #000;
-  transform-origin: top right;
-  transform: skewY(-2deg);
+  height: 0;
+  border-right: 100vw solid transparent;
+  border-top: 100px solid lightgoldenrodyellow;
   z-index: -1;
-
 }
+nav::before {
+  content: '';
+  display: block;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  border-right: 105vw solid transparent;
+  border-top: 105px solid #e89b27;
+  z-index: -2;
+}
+
