--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -2,7 +2,7 @@
   <div class="row">
     <div class="col-xs-12 col-md-3">
       <a routerLink="/" style="cursor: pointer" class="navbar-brand">
-        <img src="assets/master_culinar_logo.png" alt="Master Culinar" class="img-responsive">
+        <img src="assets/master_culinar_logo.png" alt="Master Culinar">
       </a>
     </div>
 
