--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -24,7 +24,7 @@
             Shopping list</a>
         </li>
       </ul>
-      <ul class="nav navbar-nav navbar-right">
+      <ul class="nav navbar-nav navbar-right menu">
         <ng-template [ngIf]="!(authState | async).authenticated">
           <li><a routerLink="/signup">Register</a></li>
           <li><a routerLink="/signin">Login</a></li>
